# godot-terminal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  SConstruct
.github/workflows/: build.yml
demo/: main.gd  main.gd.uid  main.tscn  project.godot
demo/addons/godot_terminal/: godot_terminal.gdextension  godot_terminal.gdextension.uid  plugin.cfg  plugin.gd  plugin.gd.uid
src/: pty.h  pty_unix.cpp  pty_unix.h  pty_windows.cpp  pty_windows.h  register_types.cpp  register_types.h  terminal.cpp  terminal.h  vt_screen.cpp  vt_screen.h
